Added options to add and remove tenant from domains